fixed portfolio video background on small screen.

--- a/src/blocks/b-portfolio-item/b-portfolio-item.less
+++ b/src/blocks/b-portfolio-item/b-portfolio-item.less
@@ -229,6 +229,10 @@
 .b-portfolio-item__background {
     display: none;
     position: relative;
+
+    @media (max-width: 990px) {
+        display: none !important;
+    }
 }
 
 .b-portfolio-item__shadow {
@@ -244,61 +248,63 @@
     border-top-right-radius: 15px;
 }
 
-.b-portfolio-item__container_with_background.b-portfolio-item_ready {
-    .b-portfolio-item__head {
-        margin: -80px 0 -4px;
-        //margin: -80px -190px -4px;
+@media (min-width: @screen-lg) {
+    .b-portfolio-item__container_with_background.b-portfolio-item_ready {
+        .b-portfolio-item__head {
+            margin: -80px 0 -4px;
+            //margin: -80px -190px -4px;
 
-        //&:after {
-        //    position: absolute;
-        //    bottom: 4px;
-        //    height: 45px;
-        //    left: 0;
-        //    right: 0;
-        //
+            //&:after {
+            //    position: absolute;
+            //    bottom: 4px;
+            //    height: 45px;
+            //    left: 0;
+            //    right: 0;
+            //
+            //    background: @body-muted-bg;
+            //
+            //    content: '';
+            //}
+
+            .b-back-button {
+                position: absolute;
+                top: 80px;
+                left: 40px;
+            }
+
+            .b-page__title {
+                position: absolute;
+                top: 80px + 21px + 50px;
+                left: 40px;
+                right: 40px;
+                color: #ffffff;
+            }
+
+            .b-page__link {
+                color: #0aeaad;
+            }
+
+            .container {
+                position: absolute;
+                top: 0;
+                left: 50%;
+                transform: translateX(-50%);
+            }
+        }
+
+        .b-portfolio-item__background {
+            border-top-left-radius: 15px;
+            border-top-right-radius: 15px;
+            overflow: hidden;
+        }
+
+        //.b-language-tabs, .b-size-tabs {
         //    background: @body-muted-bg;
+        //    margin-left: -40px;
+        //    margin-right: -40px;
         //
-        //    content: '';
+        //    padding-left: 40px;
+        //    padding-right: 40px;
         //}
-
-        .b-back-button {
-            position: absolute;
-            top: 80px;
-            left: 40px;
-        }
-
-        .b-page__title {
-            position: absolute;
-            top: 80px + 21px + 50px;
-            left: 40px;
-            right: 40px;
-            color: #ffffff;
-        }
-
-        .b-page__link {
-            color: #0aeaad;
-        }
-
-        .container {
-            position: absolute;
-            top: 0;
-            left: 50%;
-            transform: translateX(-50%);
-        }
     }
-
-    .b-portfolio-item__background {
-        border-top-left-radius: 15px;
-        border-top-right-radius: 15px;
-        overflow: hidden;
-    }
-
-    //.b-language-tabs, .b-size-tabs {
-    //    background: @body-muted-bg;
-    //    margin-left: -40px;
-    //    margin-right: -40px;
-    //
-    //    padding-left: 40px;
-    //    padding-right: 40px;
-    //}
 }
